fixed icon alignment

--- a/assets/style.css
+++ b/assets/style.css
@@ -149,8 +149,8 @@ li:hover {
   
 .fa, .material-icons {
     padding: 20px;
-    font-size: 30px;
-    width: 30px;
+    font-size: 20px;
+    width: 80px;
     text-align: center;
     text-decoration: none;
     border-radius: 50%;
